applied aws rds

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 venv/
 ENV/
 env/
+.env
 
 # IDEs and editors
 .vscode/
@@ -19,7 +20,6 @@ env/
 local_settings.py
 staticfiles/
 media/
-echo "DjangoProject_jinstagram/local_settings.py" >> .gitignore
 # Database
 *.sqlite3
 
@@ -45,5 +45,4 @@ htmlcov/
 
 # Windows
 Thumbs.db
-requirements.txt
 DjangoProject_jinstagram/local_settings.py
