--- a/.github/workflows/CI-django-jinstagram.yml
+++ b/.github/workflows/CI-django-jinstagram.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test --settings=local_settings.py
+        python manage.py test
