--- a/.github/workflows/CD-django-jinstagram.yml
+++ b/.github/workflows/CD-django-jinstagram.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: executing remote ssh commands
-      uses: appleboy/ssh-action@v0.1.10
+    - name: connect ec2
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
